<resources>
    <string name="plant_detection_waiting">식물 식별중...</string>
    <string name="plant_detection_error_msg">식별된 종이 없어요.\n종을 검색하여 직접 입력해주시거나\n다시 촬영해보세요.</string>
    <string name="plant_detection_percent_msg">% 확률로</string>
    <string name="plant_detection_label_msg">\u0020입니다.</string>

    <string name="plant_detection_easy">Easy</string>
    <string name="plant_detection_normal">Normal</string>
    <string name="plant_detection_hard">Hard</string>

    <string name="plant_detection_info_error">정보가 없습니다.</string>

    <!--    button  -->
    <string name="plant_register_skip_btn">그만두기</string>
    <string name="plant_register_next_btn">다음</string>

    <!--    dialog  -->
    <string name="plant_register_skip_dialog_title">그만두기</string>
    <string name="plant_register_skip_dialog_desc">식물 등록을 그만두시겠습니까?</string>
    <string name="plant_register_skip_dialog_cancel_btn">취소</string>
    <string name="plant_register_skip_dialog_skip_btn">그만두기</string>

    <!--    plant thumbnail fragment-->
    <string name="plant_thumbnail_title">반려식물의 예쁜 모습이 담긴\n사진을 설정해주세요 :)</string>

    <string name="plant_thumbnail_fragment_error">식물의 사진을 등록해주세요.</string>

    <!--    plant detection result fragment-->
    <string name="plant_detection_difficulty_title">관리 난이도</string>

    <string name="plant_detection_benefit_title">효과</string>

    <string name="plant_detection_tip_title">TIP</string>

    <!--    plant species fragment-->
    <string name="plant_species_fragment_title">반려식물의 종을\n입력해주세요 !</string>
    <string name="plant_species_fragment_search_hint">종 검색하기</string>
    <string name="plant_species_fragment_image_search">\u0020사진으로 검색</string>
    <string name="plant_species_fragment_image_search_help">식물의 종을 모르신다면 식별을 도와드릴게요!</string>
    <string name="plant_species_fragment_hint">종 입력</string>

    <string name="plant_species_fragment_error">식물의 종류를 기입해주세요.</string>

    <!--    plant name fragment-->
    <string name="plant_name_fragment_title">반려식물의 이름을\n입력해주세요 !</string>
    <string name="plant_name_fragment_hint">이름 입력</string>

    <string name="plant_name_fragment_error">식물 이름을 지어주세요.</string>

    <!--    plant adopt fragment-->
    <string name="plant_adopt_fragment_title">반려식물의 데려온 날을\n입력해주세요 !</string>
    <string name="plant_adopt_fragment_hint">2022.01.01</string>

    <string name="plant_adopt_fragment_error">식물을 데리고 온 날을 기입하세요.</string>

    <string name="plant_adopt_dialog_title">입양날짜 선택</string>

    <!--    plant water fragment-->
    <string name="plant_water_fragment_title">마지막으로 물 준 날짜를\n입력해주세요 !</string>
    <string name="plant_water_fragment_hint">2022.01.01</string>

    <string name="plant_water_fragment_error">마지막으로 물을 준 날을 기입하세요.</string>

    <string name="plant_water_dialog_title">마지막 물 준 날짜 선택</string>

    <!--    plant light fragment-->

    <string name="plant_light_fragment_title">현재 식물이\n빛을 어떻게 받고있나요?</string>
    <string name="plant_light_fragment_one">창문 가까이\n직사광선을 받아요</string>
    <string name="plant_light_fragment_two">창문 안쪽에서\n간접광을 받아요</string>
    <string name="plant_light_fragment_three">실내에서\n식물 조명 빛을 받아요</string>
    <string name="plant_light_fragment_four">실내에서\n해를 못 받아요</string>

    <string name="plant_light_fragment_error">하나를 선택해주세요.</string>

    <!--    plant air fragment-->
    <string name="plant_air_fragment_title">식물에게\n바람은 얼마나 통하나요?</string>
    <string name="plant_air_fragment_one">항상 잘 통해요</string>
    <string name="plant_air_fragment_two">창문을 열면 잘 통해요</string>
    <string name="plant_air_fragment_three">바람이 아예 안통해요</string>

    <string name="plant_air_fragment_error">하나를 선택해주세요.</string>

    <string name="post_plant_error">식물 등록을 실패했습니다.</string>
</resources>