<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="20dp"
    tools:context=".ui.PlantSpeciesFragment">
    <ImageView
        android:id="@+id/plant_species_back_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingVertical="5dp"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:scaleType="fitStart"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow_back" />
    <TextView
        android:id="@+id/plant_species_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#2d2d2d"
        style="@style/LoginTitleText"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_species_back_btn"
        android:text="@string/plant_species_fragment_title"/>
    <androidx.appcompat.widget.SearchView
        android:id="@+id/plant_species_search_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/SearchText"
        android:gravity="center_vertical"
        android:background="@drawable/search_background"
        app:queryBackground="@drawable/search_background"
        app:queryHint="@string/plant_species_fragment_search_hint"
        android:layout_marginTop="20dp"
        app:iconifiedByDefault="false"
        app:layout_constraintTop_toBottomOf="@+id/plant_species_title"
        app:layout_constraintLeft_toLeftOf="parent" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/plant_species_recyclerview"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/plant_species_search_view"
        app:layout_constraintBottom_toTopOf="@+id/plant_species_btns"
            />
    <EditText
        android:id="@+id/plant_species_et"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LoginEditText"
        android:enabled="false"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_species_title"
        app:layout_constraintBottom_toTopOf="@+id/plant_species_btns"
        android:inputType="textNoSuggestions"
        android:hint="@string/plant_species_fragment_hint" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="22dp"
        android:paddingHorizontal="20dp"
        style="@style/BubbleGreenText"
        android:background="@drawable/shadow_bubble"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/image_search_button"
        android:text="@string/plant_species_fragment_image_search_help" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/image_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:paddingHorizontal="25dp"
            android:drawableStart="@drawable/ic_camera"
            android:text="@string/plant_species_fragment_image_search"
            android:background="@drawable/button_image_search"
            android:textColor="@color/search_button_color"
            android:drawableTint="@color/search_button_color"
            android:layout_marginBottom="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/plant_species_btns"
            />
        <LinearLayout
            android:id="@+id/plant_species_btns"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plant_species_skip_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_skip"
                style="@style/LoginButtonText"
                android:text="@string/plant_register_skip_btn" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plant_species_next_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/button_main_green"
                style="@style/LoginButtonText"
                android:text="@string/plant_register_next_btn" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>