<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="20dp">
    <ImageView
        android:id="@+id/plant_name_back_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingVertical="5dp"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:scaleType="fitStart"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow_back" />
    <TextView
        android:id="@+id/plant_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#2d2d2d"
        style="@style/LoginTitleText"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_name_back_btn"
        android:text="@string/plant_name_fragment_title"/>
    <EditText
        android:id="@+id/plant_name_et"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LoginEditText"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_name_title"
        app:layout_constraintBottom_toTopOf="@+id/plant_name_btns"
        android:inputType="textNoSuggestions"
        android:hint="@string/plant_name_fragment_hint" />
    <LinearLayout
        android:id="@+id/plant_name_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plant_name_skip_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="52dp"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/button_skip"
            style="@style/LoginButtonText"
            android:text="@string/plant_register_skip_btn" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plant_name_next_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="52dp"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/button_active"
            style="@style/LoginButtonText"
            android:text="@string/plant_register_next_btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>