<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="20dp">
    <ImageView
        android:id="@+id/plant_water_back_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingVertical="5dp"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:scaleType="fitStart"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow_back" />
    <TextView
        android:id="@+id/plant_water_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#2d2d2d"
        style="@style/LoginTitleText"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_water_back_btn"
        android:text="@string/plant_water_fragment_title"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/plant_water_et"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LoginEditText"
        android:gravity="center"
        android:textCursorDrawable="@drawable/cursor_drawable"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_water_title"
        app:layout_constraintBottom_toTopOf="@+id/plant_water_btns"
        android:focusable="false"
        android:hint="@string/plant_water_fragment_hint" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/plant_water_date_picker_dialog"
        android:visibility="gone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:elevation="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/plant_water_date_picker_title"
            android:layout_margin="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/plant_water_dialog_title"
            style="@style/DialogTitleText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black_sub_color"/>
        <com.ycuwq.datepicker.date.DatePicker
            android:id="@+id/plant_water_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            app:layout_constraintTop_toBottomOf="@+id/plant_water_date_picker_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/plant_water_date_picker_btns"
            android:background="@color/white"
            style="@style/PleonDatePickerStyle" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"
            app:layout_constraintBottom_toTopOf="@+id/plant_water_date_picker_btns" />
        <LinearLayout
            android:id="@+id/plant_water_date_picker_btns"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plant_water_date_picker_cancel_btn"
                style="@style/DialogButtonCancelText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/dialog_cancel_btn"
                android:textColor="@color/black_sub_color" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line_color"
                app:layout_constraintBottom_toTopOf="@+id/plant_water_date_picker_btns" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plant_water_date_picker_ok_btn"
                style="@style/DialogButtonOkText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/dialog_ok_btn" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/plant_water_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plant_water_skip_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="52dp"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/button_skip"
            style="@style/LoginButtonText"
            android:text="@string/plant_register_skip_btn" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plant_water_next_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="52dp"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/button_active"
            style="@style/LoginButtonText"
            android:text="@string/plant_register_next_btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>