<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".ui.PlantThumbnailFragment">
    <ImageView
        android:id="@+id/plant_thumbnail_back_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingVertical="5dp"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:scaleType="fitStart"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow_back" />
    <TextView
        android:id="@+id/plant_thumbnail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#2d2d2d"
        style="@style/LoginTitleText"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_thumbnail_back_btn"
        android:text="@string/plant_thumbnail_title"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/plant_thumbnail_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_thumbnail_title"
        app:layout_constraintBottom_toTopOf="@+id/plant_thumbnail_btn"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/round_click_selector">
    </de.hdodenhof.circleimageview.CircleImageView>
    <ImageView
        android:id="@+id/plant_thumbnail_add_img"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/btn_photo_add"
        app:layout_constraintStart_toStartOf="@+id/plant_thumbnail_img"
        app:layout_constraintBottom_toBottomOf="@+id/plant_thumbnail_img"
        app:layout_constraintCircle="@+id/plant_thumbnail_img"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintCircleAngle="135" />
    <LinearLayout
        android:id="@+id/plant_thumbnail_btn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plant_register_skip_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_skip"
            style="@style/LoginButtonText"
            android:text="@string/plant_register_skip_btn" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plant_register_next_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/button_green_selector"
            style="@style/LoginButtonText"
            android:text="@string/plant_register_next_btn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout  >