<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="20dp">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/plant_detection_result_img"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:src = "@drawable/img_logo"/>
    <TextView
        android:id="@+id/plant_detection_result_percent"
        style="@style/ModelWaitingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/plant_detection_result_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        tools:text="99% 확률로"/>
    <TextView
        android:id="@+id/plant_detection_result_label"
        style="@style/ModelResultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/plant_detection_result_percent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:text="로즈마리 입니다." />
    <TextView
        android:id="@+id/difficulty_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="PlantDetectionTitleText"
        android:layout_marginTop="15dp"
        android:text="@string/plant_detection_difficulty_title"
        app:layout_constraintTop_toBottomOf="@+id/plant_detection_result_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <LinearLayout
        android:id="@+id/difficulty_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Easy"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:text="Easy"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Easy"/>
    </LinearLayout>
    <TextView
        android:id="@+id/benefit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="PlantDetectionTitleText"
        android:layout_marginTop="15dp"
        android:text="@string/plant_detection_benefit_title"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/benefit_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border"
        app:layout_constraintTop_toBottomOf="@+id/benefit_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/tip_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="PlantDetectionTitleText"
        android:layout_marginTop="15dp"
        android:text="@string/plant_detection_tip_title"
        app:layout_constraintTop_toBottomOf="@+id/benefit_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/tip_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border"
        app:layout_constraintTop_toBottomOf="@+id/tip_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plant_detection_result_ok_btn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button_green_selector"
        style="@style/LoginButtonText"
        android:text="@string/complete_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>